<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Pentago</string>
    <string name="muteMusic">Mute Music</string>
    <string name="muteSFX">Mute SFX</string>
    <string name="muteMusicSummary">Turn the music on or off</string>
    <string name="muteSFXSummary">Turn the sound effects on or off</string>
    
    <string name="game_settings">Settings</string>
    <string name="new_game">New Game</string>
    <string name="singlePlayer">Single Player</string>
    <string name="twoPlayer">Two Players</string>
    
    <string name="score_label_human">Human:</string>
    <string name="score_label_computer">Android:</string>
    <string name="score_label_tie">Ties:</string>
    
    <string name="first_human">You go first.</string>
    <string name="first_computer">Android will go first.</string>
    
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    
    <string name="result_tie">It\'s a tie.</string>
    <string name="result_human_wins">You won!</string>
    <string name="result_computer_wins">Android won!</string>
    
    <string name="difficulty_choose">Choose a difficulty level:</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_expert">Expert</string>
    
    <string name="goes_first_human">Human</string>
    <string name="goes_first_computer">Android</string>
    <string name="goes_first_alternate">Alternate</string>
    
    <string name="name">Name:</string>
    <string name="player1_name_label">Player 1 Name:</string>
	<string name="player2_name_label">Player 2 Name:</string>
	<string name="name_dialog_title">Input Player Names</string>
	<string name="name_hint">ex. John Doe</string>
	<string name="ok_button">OK</string>
	<string name="cancel_button">Cancel</string>
	<string name="name_default">Player</string>
	<string name="save_button">Save</string>
	
	<string name="edit_player">Edit Player</string>
	
	<string name="PvP">2 Player</string>
	<string name="AI">AI</string>
	
    <string name="hello_world">Hello world!</string>
    <string name="newGame">New Game</string>
    <string name="gameSettings">Settings</string>
    <string name="help">Help</string>
    <string name="records">Records</string>
    <string name="welcome">PENTAGO</string>
    
    <string name="master_volume">Master Volume</string>
    <string name="music_volume">Music Volume</string>
    <string name="sfx_volume">SFX Volume</string>
    <string name="animations">Animations</string>
    <string name="confirmMoves">Confirm Moves</string>
    <string name="sounds">Sounds</string>
    
    <string name="beginning">
        The game starts with an empty game board. The game board 
       	consists of four quadrants.
    </string>
    
    <string name="placePiece">
    	The starting player places a marble in a socket of his 
    	choice. After placing a marble the player rotates
        any one of the four quadrants 90 degrees either 
        clockwise or counterclockwise. The second player 
        does the same.
    </string>
    
    <string name="winning">
        The first player to get five marbles in a row wins! 
        The row can be horizontal, vertical or diagonal. 
		If a player gets five in a row when placing a marble he 
		does not need to turn a board. 
    </string>
    
    <string name="draw">
        If all the sockets have been filled and neither player 
        has gotten five in a row or if both players get five in 
        a row as a player turns a board the game is draw.  
	</string>
</resources>
