<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/musicVolumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_volume" />

        <CheckBox
            android:id="@+id/musicMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginLeft="80dp"
            android:text="@string/muteMusic" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/musicVolumeControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sfxVolumeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sfx_volume" />

        <CheckBox
            android:id="@+id/sfxMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:layout_marginLeft="80dp"
            android:text="@string/muteSFX" />

    </LinearLayout>

    <SeekBar
        android:id="@+id/sfxVolumeControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <CheckBox
        android:id="@+id/confirmMoves"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/confirmMoves" />

    <CheckBox
        android:id="@+id/animationsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/animations" />

    <Button
        android:id="@+id/editPlayerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_player" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal" >



        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />

    </LinearLayout>

</LinearLayout>